// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe incrementar el contador 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <span>
      0
    </span>
    <button>
      +1
    </button>
  </div>
</div>
`;

exports[`ProductCard debe mostrar el componente correctamente  1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      ProductCard
    </h1>
  </div>
</div>
`;
